<resources>
    <string name="app_name">ToDoApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="password_field">Password</string>
    <string name="login_field">Login</string>
    <string name="enter_button">Enter</string>
    <string name="log_out">LogOut</string>

    <string name="nothing_to_show">Nothing to show</string>
    <string name="new_item">New item</string>
    <string name="title_hint">Title</string>
    <string name="body_hint">Body</string>
    <string name="add_item_btn_text">Add item</string>

    <string name="todo_done_txt">Done</string>
    <string name="todo_in_progress_txt">In progress</string>
    <string name="todo_failed_txt">Failed</string>
</resources>
