<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_standart_margin"
        android:text="@string/new_item"
        android:textSize="@dimen/fragment_standart_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_item_title_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        android:layout_marginTop="@dimen/fragment_standart_margin"
        android:layout_marginStart="@dimen/fragment_standart_margin"
        android:layout_marginEnd="@dimen/fragment_standart_margin"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_item_body_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_standart_margin"
        android:hint="@string/body_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_item_title_field"
        android:layout_marginStart="@dimen/fragment_standart_margin"
        android:layout_marginEnd="@dimen/fragment_standart_margin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/add_item_btn_text"
        app:layout_constraintTop_toBottomOf="@id/add_item_body_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/fragment_standart_margin"
        android:layout_marginStart="@dimen/fragment_standart_margin"
        android:layout_marginEnd="@dimen/fragment_standart_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>